tests/snapshots/unicode_edge_cases_test__grapheme_cluster_skin_tone.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[🏽]
