tests/snapshots/unicode_edge_cases_test__hebrew_text.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 2

Buffer:
ש[ל]ום
