tests/snapshots/unicode_edge_cases_test__insert_emoji.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
t [😀]est
