tests/snapshots/unicode_edge_cases_test__insert_unicode.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 2

Buffer:
h 世[界]ello
