tests/snapshots/unicode_edge_cases_test__japanese_mixed.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
Hello こんにちは [W]orld
