tests/snapshots/unicode_edge_cases_test__korean_hangul.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 2

Buffer:
안녕[하]세요
